# minilzo-java

./: README.md  pom.xml
src/main/java/com/lingmoyun/minilzo/: LibLoader.java  MiniLZO.java
src/main/native/minilzo/: CMakeLists.txt  README.md
src/main/native/minilzo/inc/: com_lingmoyun_minilzo_MiniLZO.h
src/main/native/minilzo/src/: com_lingmoyun_minilzo_MiniLZO.c
src/main/resources/libs/: libminilzo_java.dylib
src/test/java/com/lingmoyun/example/: MiniLZOExample.java
